# cohortweave-open-evaluation

./: CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md
cohortweave-open-evaluation/: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  PUBLIC_RELEASE_MANIFEST.json  SECURITY.md  pyproject.toml  requirements-real-ct.txt  requirements.txt
cohortweave-open-evaluation/docs/: data_provenance.md  evidence_boundaries.md  fairness_stress_test.md  metrics.md  open_science.md  public_release_checklist.md  reproduce_spark.md  responsible_ai.md  spark_results.md
cohortweave-open-evaluation/experiments/spark/: 00_public_index_qc.py  01_make_cohort.py  02_synth_eval.py  03_imaging.py  04_figures.py  05_survival_fairness.py  06_survival_figure.py  07_constraint_ablation.py  08_real_ct_pixel_evidence.py  README.md  compute_budget.py  run_all.py
cohortweave-open-evaluation/fixtures/: README.md  clinical_fixture.schema.json  fixture_manifest.json  synthetic_clinical.csv
cohortweave-open-evaluation/results/: README.md  compute_budget_output.txt  fairness_release_gate.json  index_qc_summary.json  results.json  results_constraint_ablation.json  results_imaging.json  results_real_ct_pixel.json  results_survival.json
cohortweave-open-evaluation/results/case_level/: real_ct_proxy_cases.csv
cohortweave-open-evaluation/scripts/: check_public_release.py  make_release_archive.py  reproduce_spark.py  verify_frozen_results.py
cohortweave-open-evaluation/tests/: test_fixtures.py  test_metrics.py  test_results_and_release.py
(+3 files in other folders)
