[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cohortweave-eval"
version = "0.1.0"
description = "Open evaluation and reproducibility components for CohortWeave Spark evidence"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "Apache-2.0"}
authors = [{name = "CohortWeave contributors"}]
dependencies = [
  "numpy==2.3.5",
  "pandas==2.2.3",
  "scipy==1.17.0",
  "scikit-learn==1.8.0",
  "scikit-image==0.26.0",
  "matplotlib==3.10.8",
  "PyYAML==6.0.3"
]

[project.optional-dependencies]
test = ["pytest==9.0.2"]
real-ct = [
  "pydicom==3.0.1",
  "pydicom-data==1.0.0",
  "torch==2.10.0",
  "opencv-python-headless==4.13.0.92"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
